test/sema/compile-time-out-of-bounds-array-index.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

extern def foo(): int[5]*;

def main() {
    let p = foo();
    // CHECK: [[@LINE+1]]:15: error: accessing array out-of-bounds with index 5, array size is 5
    let e = p[5];
}
